--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,8 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #open view
 spring.jpa.open-in-view=false
 
-spring.servlet.multipart.max-file-size=128KB
-spring.servlet.multipart.max-request-size=128KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -17,3 +17,9 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 
 upload.dir=/root/abc/dfdf
+
+#logging
+logging.file.path=logs/
+logging.file.name=/var/log/moglix/my-app/app.log
+logging.level.root=INFO
+spring.main.banner-mode=off
