--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>8</java.version>
+		<spring-cloud.version>2021.0.4</spring-cloud.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -105,6 +107,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 
 		<!--  Query DSL dependency  FOR JPA-->
 		<dependency>
@@ -122,6 +128,18 @@
 
 		<!-- Query DSL dependency END -->
 	</dependencies>
+	<!--  for feign client -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
