--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -23,3 +23,7 @@ logging.file.path=logs/
 logging.file.name=/var/log/moglix/my-app/app.log
 logging.level.root=INFO
 spring.main.banner-mode=off
+
+#for mongo db
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.repository.Query=DEBUG
