--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 
-upload.dir=/root/abc/dfdf
+upload.dir=/home/moglix/Documents/data/social
 
 #logging
 logging.file.path=logs/
@@ -24,6 +24,12 @@ logging.file.name=/var/log/moglix/my-app/app.log
 logging.level.root=INFO
 spring.main.banner-mode=off
 
+#mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.mapperLocations=com.management.mybatis
 #for mongo db
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb.repository.Query=DEBUG
+
+
+# aws properties
+
