--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -32,4 +32,7 @@ logging.level.org.springframework.data.mongodb.repository.Query=DEBUG
 
 
 # aws properties
-
+aws.access-key=AKI
+aws.seceret-key=Y+dz0Uy
+aws.bucket-name=first
+aws.region=us-east-1
