seventh commit added kafka

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -32,7 +32,12 @@ logging.level.org.springframework.data.mongodb.repository.Query=DEBUG
 
 
 # aws properties
-aws.access-key=AKI
-aws.seceret-key=Y+dz0Uy
-aws.bucket-name=first
+aws.access-key=AKIAQCF
+aws.seceret-key=Y+
+aws.bucket-name=first-bucket-aditya
 aws.region=us-east-1
+
+#Kafka Config
+#spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=myGroup
+bootstrap.server=localhost:9092
